Bulk commit; to be split tomorrow